--- a/codinghub-web/src/main/resources-env/dev/application.yml
+++ b/codinghub-web/src/main/resources-env/dev/application.yml
@@ -6,5 +6,8 @@ spring:
     username: root
     password: hsc0423
     driver-class-name: com.mysql.cj.jdbc.Driver
+  redis:
+    host: 127.0.0.1
+    port: 6379
 server:
   port: 8080
