--- a/codinghub-web/src/main/resources-env/prod/application.yml
+++ b/codinghub-web/src/main/resources-env/prod/application.yml
@@ -6,5 +6,13 @@ spring:
     username: root
     password: hsc0423
     driver-class-name: com.mysql.cj.jdbc.Driver
+  redis:
+    host: 127.0.0.1
+    port: 6379
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 server:
   port: 80
